--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,9 +1,33 @@
 <%= form_for @post do |f| %>
-	<%= f.label :title %>
-	<%= f.text_field :title %> <br>
 
-	<%= f.label :text %>
-	<%= f.text_area :text %> <br>
+  <% if @post.errors.any? %>
+    <div id="error_explanation">
+      <%= pluralize(@post.errors.count, "error") %> prohibited this article from being saved:
+    
+      <ul>
+        <% @post.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+      </ul>
 
-	<%= f.submit %>
+    </div>
+  <% end %>
+
+  <p>
+    <%= f.label :title %> <br>
+    <%= f.text_field :title %>
+  </p>
+
+  <p>
+    <%= f.label :text %> <br>
+    <%= f.text_area :text %>
+  </p>
+
+  <p>
+    <%= f.submit %>
+  </p>
 <% end %>
+
+<p>
+  <%= link_to "Index", posts_path %>
+</p>
