Add comments to individual posts

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,5 +5,39 @@
 </p>
 
 <p>
+  <strong>Comments:</strong> <br>
+  <table>
+    <tr>
+      <th>Author</th>
+      <th>Comment</th>
+      <th colspan="1"></th>
+    </tr>
+    <% @post.comments.each do |cmt| %>
+      <tr>
+        <td><%= cmt.author %></td>
+        <td><%= cmt.text %></td>
+        <td><%= link_to 'Delete', [cmt.post, cmt], method: :delete, data: { confirm: "Are you sure?" } %></td>
+      </tr>
+    <% end %>
+  </table>
+</p>
+
+<h4>Add a comment:</h4>
+<%= form_for [@post, @post.comments.build] do |f| %>
+  <p>
+    <%= f.label :author %><br>
+    <%= f.text_field :author %>
+  </p>
+  <p>
+    <%= f.label :text %><br>
+    <%= f.text_area :text %>
+  </p>
+  <p>
+    <%= f.submit %>
+  </p>
+<% end %>
+
+
+<p>
   <%= link_to 'Back', posts_path %>
 </p>
